# clsh

./: CMakeLists.txt  Command.h  README.md  builtins.cpp  builtins.h  main.cpp
commands/: EchoCommand.cpp  EchoCommand.h  ExitCommand.cpp  ExitCommand.h  HelpCommand.cpp  HelpCommand.h
